# rules_vhdl

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: bcr-publish.yaml  bcr_helper.yml  ci.yml  lint.yml  release.yaml
examples/: BUILD.bazel  MODULE.bazel
examples/src/: adder.vhd  math_pkg.vhd  top.vhd
tools/bzl_version/: BUILD.bazel  version_test.py
vhdl/: BUILD.bazel  defs.bzl  providers.bzl  vhdl_info.bzl  vhdl_library.bzl
vhdl/tests/: BUILD.bazel  dep_a.vhd  dep_b.vhdl  invalid.txt  leaf.vhd  leaf_pkg.vhd  top.vhd  vhdl_library_analysis_test.bzl
