load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "vhdl_info.bzl",
    "vhdl_library.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":vhdl_info_bzl",
        ":vhdl_library_bzl",
    ],
)

bzl_library(
    name = "vhdl_info_bzl",
    srcs = ["vhdl_info.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "vhdl_library_bzl",
    srcs = ["vhdl_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [":vhdl_info_bzl"],
)
